# -4-OOP-

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json  vacancies.txt
src/: get_vacancies.py  hh_api.py  json_saver.py  saver.py  txt_saver.py  utils.py  vacancy.py
tests/: conftest.py  test_json_saver.py  test_txt_saver.py  test_vacancy.py
