[tool.poetry]
name = "oop4"
version = "0.1.0"
description = ""
authors = ["Коробов Василий <kavyabass51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
